# embed-server

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.zh.md  pyproject.toml
src/embed_server/: __init__.py  __main__.py  cli.py  process_manager.py  server.py
src/embed_server/plugin/: __init__.py  plugin.yaml
src/embed_server/plugin/model/models--nomic-ai--nomic-embed-text-v1.5/snapshots/e9b6763023c676ca8431644204f50c2b100d9aab/onnx/: model.onnx
